feat: reading for a specific user, postgres integration for users, docker-compose

--- a/three-cards-divination/src/main/resources/application.properties
+++ b/three-cards-divination/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-
+## PostgreSQL
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/cyber_mysticism
+spring.datasource.username=app_user
+spring.datasource.password=app_password
+## Default connection pool
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+## JPA
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+## Others
+spring.thymeleaf.check-template-location=false
