--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
     <packaging>pom</packaging>
     <name>mysticism</name>
     <description>Cyber Mysticism Platform</description>
+    <modules>
+        <module>three-cards-divination</module>
+    </modules>
 
     <profiles>
         <profile>
@@ -33,12 +36,22 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
