--- a/three-cards-divination/src/main/resources/application.properties
+++ b/three-cards-divination/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 ## Others
 spring.thymeleaf.check-template-location=false
+##Swagger
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs
+# disable api-docs
+springdoc.api-docs.enabled=false
