--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <spring-boot-starter.version>3.2.0</spring-boot-starter.version>
         <postgresql.version>42.6.0</postgresql.version>
         <mockito-core.version>5.7.0</mockito-core.version>
-        <springdoc-openapi-starter-webmvc-ui>2.3.0</springdoc-openapi-starter-webmvc-ui>
+        <springdoc-openapi-starter-webmvc-ui.version>2.3.0</springdoc-openapi-starter-webmvc-ui.version>
     </properties>
     <dependencies>
         <dependency>
@@ -64,7 +64,7 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>${springdoc-openapi-starter-webmvc-ui}</version>
+            <version>${springdoc-openapi-starter-webmvc-ui.version}</version>
         </dependency>
 
         <dependency>
