--- a/three-cards-divination/src/main/resources/application.properties
+++ b/three-cards-divination/src/main/resources/application.properties
@@ -13,7 +13,9 @@ spring.jpa.hibernate.ddl-auto=update
 ## Others
 spring.thymeleaf.check-template-location=false
 ##Swagger
+# Path for accessing the Swagger UI
 springdoc.swagger-ui.path=/swagger-ui.html
+# Path for accessing the Swagger Docs API
 springdoc.api-docs.path=/api-docs
-# disable api-docs
+# Flag to enable/disable the Swagger Docs API
 springdoc.api-docs.enabled=false
