--- a/three-cards-divination/src/main/resources/application.properties
+++ b/three-cards-divination/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-## PostgreSQL
+## PostgreSQL - Spring doesn't read from .env files, so when starting the app without docker, these will have to
+## be consistent with the env vars defined for the postgres container
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/cyber_mysticism
-spring.datasource.username=app_user
-spring.datasource.password=app_password
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/cyber_mysticism}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:default_user}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:default_pass}
 ## Default connection pool
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
@@ -18,4 +19,4 @@ springdoc.swagger-ui.path=/swagger-ui.html
 # Path for accessing the Swagger Docs API
 springdoc.api-docs.path=/api-docs
 # Flag to enable/disable the Swagger Docs API
-springdoc.api-docs.enabled=false
+springdoc.api-docs.enabled=true
