feat: improved reading and user endpoint; changed cards retrieval implementation

--- a/three-cards-divination/src/main/resources/application.properties
+++ b/three-cards-divination/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 ## PostgreSQL - Spring doesn't read from .env files, so when starting the app without docker, these will have to
 ## be consistent with the env vars defined for the postgres container
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.sql.init.mode=always
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/cyber_mysticism}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:default_user}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:default_pass}
